--- a/assets/styles.css
+++ b/assets/styles.css
@@ -57,6 +57,7 @@ body {
 .hero3 {
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 100vh;
     background-color: #000000;
 }
@@ -85,6 +86,40 @@ body {
 
 footer {
     background-color: #000000;
+}
+
+nav {
+    position: fixed;
+    top: 45%;
+    right: 5%;
+    left: auto;
+    bottom: auto;
+    z-index: 10;
+}
+nav ul {
+    list-style: none;
+    padding: 0;
+}
+
+nav ul li span {
+    display: inline-block;
+    position: relative;
+}
+
+.circle {
+    height: 35px;
+    width: 6px;
+    border-radius: 13%;
+    background-color: #ffffff;
+}
+
+nav a:hover,
+nav .active-section {
+    color: #1e46f5;
+}
+nav a:hover span,
+nav .active-section span {
+    background-color: #1e46f5;
 }
 
 /* ----------------------------------------- */
